[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fhir_analyzer"
version = "0.0.6"
authors = [{ name = "Till Rostalski", email = "tillrostalski@gmail.com" }]
description = "A small FHIR package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fhir.resources",
  "pandas",
  "fhirpathpy",
  "networkx",
  "nxontology",
]

[project.optional-dependencies]
dev = ["pytest", "twine"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/trostalski/fhir_analyzer"
